--- a/index.html
+++ b/index.html
@@ -115,31 +115,31 @@
                     </div>
                 </div>
                 <div class="img">
-                    <img src="/skill's/css.png" alt="">
+                    <img src="./skill's/css.png" alt="">
                     <div class="text">
                         <h2>CSS</h2>
                     </div>
                 </div>
                 <div class="img">
-                    <img src="/skill's/javascript.png" alt="">
+                    <img src="./skill's/javascript.png" alt="">
                     <div class="text">
                         <h2>JavaScript</h2>
                     </div>
                 </div>
                 <div class="img">
-                    <img src="/skill's/python.png" alt="">
+                    <img src="./skill's/python.png" alt="">
                     <div class="text">
                         <h2>Python</h2>
                     </div>
                 </div>
                 <div class="img">
-                    <img src="/skill's/mysql.png" alt="">
+                    <img src="./skill's/mysql.png" alt="">
                     <div class="text">
                         <h2>My Sql</h2>
                     </div>
                 </div>
                 <div class="img">
-                    <img src="/skill's/corel-draw.png" alt="">
+                    <img src="./skill's/corel-draw.png" alt="">
                     <div class="text">
                         <h2>CorelDraw</h2>
                     </div>
@@ -147,37 +147,37 @@
             </div>
             <div class="logos-slider">
                 <div class="img">
-                    <img src="/skill's/html.png" alt="">
+                    <img src="./skill's/html.png" alt="">
                     <div class="text">
                         <h2>HTML</h2>
                     </div>
                 </div>
                 <div class="img">
-                    <img src="/skill's/css.png" alt="">
+                    <img src="./skill's/css.png" alt="">
                     <div class="text">
                         <h2>CSS</h2>
                     </div>
                 </div>
                 <div class="img">
-                    <img src="/skill's/javascript.png" alt="">
+                    <img src="./skill's/javascript.png" alt="">
                     <div class="text">
                         <h2>JavaScript</h2>
                     </div>
                 </div>
                 <div class="img">
-                    <img src="/skill's/python.png" alt="">
+                    <img src="./skill's/python.png" alt="">
                     <div class="text">
                         <h2>Python</h2>
                     </div>
                 </div>
                 <div class="img">
-                    <img src="/skill's/mysql.png" alt="">
+                    <img src="./skill's/mysql.png" alt="">
                     <div class="text">
                         <h2>My SQL</h2>
                     </div>
                 </div>
                 <div class="img">
-                    <img src="/skill's/corel-draw.png" alt="">
+                    <img src="./skill's/corel-draw.png" alt="">
                     <div class="text">
                         <h2>CorelDraw</h2>
                     </div>
