--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                 <div class="img">
                     <img src="./skill's/html.png" alt="">
                     <div class="text">
-                        <h2>HTML</h2>
+                        <h2>HTML:5</h2>
                     </div>
                 </div>
                 <div class="img">
